// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, loaded with data 1`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading "
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <GroupUsersRow
      displayName="Name0 Surname0"
      email="test0@test.com"
      key="id0"
      lastPictureUpdate={0}
      userId="id0"
      username="username0"
    />
    <GroupUsersRow
      displayName="Name1 Surname1"
      email="test1@test.com"
      key="id1"
      lastPictureUpdate={1}
      userId="id1"
      username="username1"
    />
    <GroupUsersRow
      displayName="Name2 Surname2"
      email="test2@test.com"
      key="id2"
      lastPictureUpdate={2}
      userId="id2"
      username="username2"
    />
    <GroupUsersRow
      displayName="Name3 Surname3"
      email="test3@test.com"
      key="id3"
      lastPictureUpdate={3}
      userId="id3"
      username="username3"
    />
    <GroupUsersRow
      displayName="Name4 Surname4"
      email="test4@test.com"
      key="id4"
      lastPictureUpdate={4}
      userId="id4"
      username="username4"
    />
    <GroupUsersRow
      displayName="Name5 Surname5"
      email="test5@test.com"
      key="id5"
      lastPictureUpdate={5}
      userId="id5"
      username="username5"
    />
    <GroupUsersRow
      displayName="Name6 Surname6"
      email="test6@test.com"
      key="id6"
      lastPictureUpdate={6}
      userId="id6"
      username="username6"
    />
    <GroupUsersRow
      displayName="Name7 Surname7"
      email="test7@test.com"
      key="id7"
      lastPictureUpdate={7}
      userId="id7"
      username="username7"
    />
    <GroupUsersRow
      displayName="Name8 Surname8"
      email="test8@test.com"
      key="id8"
      lastPictureUpdate={8}
      userId="id8"
      username="username8"
    />
    <GroupUsersRow
      displayName="Name9 Surname9"
      email="test9@test.com"
      key="id9"
      lastPictureUpdate={9}
      userId="id9"
      username="username9"
    />
    <GroupUsersRow
      displayName="Name10 Surname10"
      email="test10@test.com"
      key="id10"
      lastPictureUpdate={10}
      userId="id10"
      username="username10"
    />
    <GroupUsersRow
      displayName="Name11 Surname11"
      email="test11@test.com"
      key="id11"
      lastPictureUpdate={11}
      userId="id11"
      username="username11"
    />
    <GroupUsersRow
      displayName="Name12 Surname12"
      email="test12@test.com"
      key="id12"
      lastPictureUpdate={12}
      userId="id12"
      username="username12"
    />
    <GroupUsersRow
      displayName="Name13 Surname13"
      email="test13@test.com"
      key="id13"
      lastPictureUpdate={13}
      userId="id13"
      username="username13"
    />
    <GroupUsersRow
      displayName="Name14 Surname14"
      email="test14@test.com"
      key="id14"
      lastPictureUpdate={14}
      userId="id14"
      username="username14"
    />
    <GroupUsersRow
      displayName="Name15 Surname15"
      email="test15@test.com"
      key="id15"
      lastPictureUpdate={15}
      userId="id15"
      username="username15"
    />
    <GroupUsersRow
      displayName="Name16 Surname16"
      email="test16@test.com"
      key="id16"
      lastPictureUpdate={16}
      userId="id16"
      username="username16"
    />
    <GroupUsersRow
      displayName="Name17 Surname17"
      email="test17@test.com"
      key="id17"
      lastPictureUpdate={17}
      userId="id17"
      username="username17"
    />
    <GroupUsersRow
      displayName="Name18 Surname18"
      email="test18@test.com"
      key="id18"
      lastPictureUpdate={18}
      userId="id18"
      username="username18"
    />
    <GroupUsersRow
      displayName="Name19 Surname19"
      email="test19@test.com"
      key="id19"
      lastPictureUpdate={19}
      userId="id19"
      username="username19"
    />
  </div>
  <div
    className="group-users--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 20,
            "startCount": 1,
            "total": 20,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, loaded with multiple pages 1`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading "
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <GroupUsersRow
      displayName="Name0 Surname0"
      email="test0@test.com"
      key="id0"
      lastPictureUpdate={0}
      userId="id0"
      username="username0"
    />
    <GroupUsersRow
      displayName="Name1 Surname1"
      email="test1@test.com"
      key="id1"
      lastPictureUpdate={1}
      userId="id1"
      username="username1"
    />
    <GroupUsersRow
      displayName="Name2 Surname2"
      email="test2@test.com"
      key="id2"
      lastPictureUpdate={2}
      userId="id2"
      username="username2"
    />
    <GroupUsersRow
      displayName="Name3 Surname3"
      email="test3@test.com"
      key="id3"
      lastPictureUpdate={3}
      userId="id3"
      username="username3"
    />
    <GroupUsersRow
      displayName="Name4 Surname4"
      email="test4@test.com"
      key="id4"
      lastPictureUpdate={4}
      userId="id4"
      username="username4"
    />
    <GroupUsersRow
      displayName="Name5 Surname5"
      email="test5@test.com"
      key="id5"
      lastPictureUpdate={5}
      userId="id5"
      username="username5"
    />
    <GroupUsersRow
      displayName="Name6 Surname6"
      email="test6@test.com"
      key="id6"
      lastPictureUpdate={6}
      userId="id6"
      username="username6"
    />
    <GroupUsersRow
      displayName="Name7 Surname7"
      email="test7@test.com"
      key="id7"
      lastPictureUpdate={7}
      userId="id7"
      username="username7"
    />
    <GroupUsersRow
      displayName="Name8 Surname8"
      email="test8@test.com"
      key="id8"
      lastPictureUpdate={8}
      userId="id8"
      username="username8"
    />
    <GroupUsersRow
      displayName="Name9 Surname9"
      email="test9@test.com"
      key="id9"
      lastPictureUpdate={9}
      userId="id9"
      username="username9"
    />
    <GroupUsersRow
      displayName="Name10 Surname10"
      email="test10@test.com"
      key="id10"
      lastPictureUpdate={10}
      userId="id10"
      username="username10"
    />
    <GroupUsersRow
      displayName="Name11 Surname11"
      email="test11@test.com"
      key="id11"
      lastPictureUpdate={11}
      userId="id11"
      username="username11"
    />
    <GroupUsersRow
      displayName="Name12 Surname12"
      email="test12@test.com"
      key="id12"
      lastPictureUpdate={12}
      userId="id12"
      username="username12"
    />
    <GroupUsersRow
      displayName="Name13 Surname13"
      email="test13@test.com"
      key="id13"
      lastPictureUpdate={13}
      userId="id13"
      username="username13"
    />
    <GroupUsersRow
      displayName="Name14 Surname14"
      email="test14@test.com"
      key="id14"
      lastPictureUpdate={14}
      userId="id14"
      username="username14"
    />
    <GroupUsersRow
      displayName="Name15 Surname15"
      email="test15@test.com"
      key="id15"
      lastPictureUpdate={15}
      userId="id15"
      username="username15"
    />
    <GroupUsersRow
      displayName="Name16 Surname16"
      email="test16@test.com"
      key="id16"
      lastPictureUpdate={16}
      userId="id16"
      username="username16"
    />
    <GroupUsersRow
      displayName="Name17 Surname17"
      email="test17@test.com"
      key="id17"
      lastPictureUpdate={17}
      userId="id17"
      username="username17"
    />
    <GroupUsersRow
      displayName="Name18 Surname18"
      email="test18@test.com"
      key="id18"
      lastPictureUpdate={18}
      userId="id18"
      username="username18"
    />
    <GroupUsersRow
      displayName="Name19 Surname19"
      email="test19@test.com"
      key="id19"
      lastPictureUpdate={19}
      userId="id19"
      username="username19"
    />
  </div>
  <div
    className="group-users--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 20,
            "startCount": 1,
            "total": 55,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, loaded with multiple pages 2`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading "
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <GroupUsersRow
      displayName="Name0 Surname0"
      email="test0@test.com"
      key="id0"
      lastPictureUpdate={0}
      userId="id0"
      username="username0"
    />
    <GroupUsersRow
      displayName="Name1 Surname1"
      email="test1@test.com"
      key="id1"
      lastPictureUpdate={1}
      userId="id1"
      username="username1"
    />
    <GroupUsersRow
      displayName="Name2 Surname2"
      email="test2@test.com"
      key="id2"
      lastPictureUpdate={2}
      userId="id2"
      username="username2"
    />
    <GroupUsersRow
      displayName="Name3 Surname3"
      email="test3@test.com"
      key="id3"
      lastPictureUpdate={3}
      userId="id3"
      username="username3"
    />
    <GroupUsersRow
      displayName="Name4 Surname4"
      email="test4@test.com"
      key="id4"
      lastPictureUpdate={4}
      userId="id4"
      username="username4"
    />
    <GroupUsersRow
      displayName="Name5 Surname5"
      email="test5@test.com"
      key="id5"
      lastPictureUpdate={5}
      userId="id5"
      username="username5"
    />
    <GroupUsersRow
      displayName="Name6 Surname6"
      email="test6@test.com"
      key="id6"
      lastPictureUpdate={6}
      userId="id6"
      username="username6"
    />
    <GroupUsersRow
      displayName="Name7 Surname7"
      email="test7@test.com"
      key="id7"
      lastPictureUpdate={7}
      userId="id7"
      username="username7"
    />
    <GroupUsersRow
      displayName="Name8 Surname8"
      email="test8@test.com"
      key="id8"
      lastPictureUpdate={8}
      userId="id8"
      username="username8"
    />
    <GroupUsersRow
      displayName="Name9 Surname9"
      email="test9@test.com"
      key="id9"
      lastPictureUpdate={9}
      userId="id9"
      username="username9"
    />
    <GroupUsersRow
      displayName="Name10 Surname10"
      email="test10@test.com"
      key="id10"
      lastPictureUpdate={10}
      userId="id10"
      username="username10"
    />
    <GroupUsersRow
      displayName="Name11 Surname11"
      email="test11@test.com"
      key="id11"
      lastPictureUpdate={11}
      userId="id11"
      username="username11"
    />
    <GroupUsersRow
      displayName="Name12 Surname12"
      email="test12@test.com"
      key="id12"
      lastPictureUpdate={12}
      userId="id12"
      username="username12"
    />
    <GroupUsersRow
      displayName="Name13 Surname13"
      email="test13@test.com"
      key="id13"
      lastPictureUpdate={13}
      userId="id13"
      username="username13"
    />
    <GroupUsersRow
      displayName="Name14 Surname14"
      email="test14@test.com"
      key="id14"
      lastPictureUpdate={14}
      userId="id14"
      username="username14"
    />
    <GroupUsersRow
      displayName="Name15 Surname15"
      email="test15@test.com"
      key="id15"
      lastPictureUpdate={15}
      userId="id15"
      username="username15"
    />
    <GroupUsersRow
      displayName="Name16 Surname16"
      email="test16@test.com"
      key="id16"
      lastPictureUpdate={16}
      userId="id16"
      username="username16"
    />
    <GroupUsersRow
      displayName="Name17 Surname17"
      email="test17@test.com"
      key="id17"
      lastPictureUpdate={17}
      userId="id17"
      username="username17"
    />
    <GroupUsersRow
      displayName="Name18 Surname18"
      email="test18@test.com"
      key="id18"
      lastPictureUpdate={18}
      userId="id18"
      username="username18"
    />
    <GroupUsersRow
      displayName="Name19 Surname19"
      email="test19@test.com"
      key="id19"
      lastPictureUpdate={19}
      userId="id19"
      username="username19"
    />
  </div>
  <div
    className="group-users--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 40,
            "startCount": 21,
            "total": 55,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev "
      disabled={false}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, loaded with multiple pages 3`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading "
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <GroupUsersRow
      displayName="Name0 Surname0"
      email="test0@test.com"
      key="id0"
      lastPictureUpdate={0}
      userId="id0"
      username="username0"
    />
    <GroupUsersRow
      displayName="Name1 Surname1"
      email="test1@test.com"
      key="id1"
      lastPictureUpdate={1}
      userId="id1"
      username="username1"
    />
    <GroupUsersRow
      displayName="Name2 Surname2"
      email="test2@test.com"
      key="id2"
      lastPictureUpdate={2}
      userId="id2"
      username="username2"
    />
    <GroupUsersRow
      displayName="Name3 Surname3"
      email="test3@test.com"
      key="id3"
      lastPictureUpdate={3}
      userId="id3"
      username="username3"
    />
    <GroupUsersRow
      displayName="Name4 Surname4"
      email="test4@test.com"
      key="id4"
      lastPictureUpdate={4}
      userId="id4"
      username="username4"
    />
    <GroupUsersRow
      displayName="Name5 Surname5"
      email="test5@test.com"
      key="id5"
      lastPictureUpdate={5}
      userId="id5"
      username="username5"
    />
    <GroupUsersRow
      displayName="Name6 Surname6"
      email="test6@test.com"
      key="id6"
      lastPictureUpdate={6}
      userId="id6"
      username="username6"
    />
    <GroupUsersRow
      displayName="Name7 Surname7"
      email="test7@test.com"
      key="id7"
      lastPictureUpdate={7}
      userId="id7"
      username="username7"
    />
    <GroupUsersRow
      displayName="Name8 Surname8"
      email="test8@test.com"
      key="id8"
      lastPictureUpdate={8}
      userId="id8"
      username="username8"
    />
    <GroupUsersRow
      displayName="Name9 Surname9"
      email="test9@test.com"
      key="id9"
      lastPictureUpdate={9}
      userId="id9"
      username="username9"
    />
    <GroupUsersRow
      displayName="Name10 Surname10"
      email="test10@test.com"
      key="id10"
      lastPictureUpdate={10}
      userId="id10"
      username="username10"
    />
    <GroupUsersRow
      displayName="Name11 Surname11"
      email="test11@test.com"
      key="id11"
      lastPictureUpdate={11}
      userId="id11"
      username="username11"
    />
    <GroupUsersRow
      displayName="Name12 Surname12"
      email="test12@test.com"
      key="id12"
      lastPictureUpdate={12}
      userId="id12"
      username="username12"
    />
    <GroupUsersRow
      displayName="Name13 Surname13"
      email="test13@test.com"
      key="id13"
      lastPictureUpdate={13}
      userId="id13"
      username="username13"
    />
    <GroupUsersRow
      displayName="Name14 Surname14"
      email="test14@test.com"
      key="id14"
      lastPictureUpdate={14}
      userId="id14"
      username="username14"
    />
    <GroupUsersRow
      displayName="Name15 Surname15"
      email="test15@test.com"
      key="id15"
      lastPictureUpdate={15}
      userId="id15"
      username="username15"
    />
    <GroupUsersRow
      displayName="Name16 Surname16"
      email="test16@test.com"
      key="id16"
      lastPictureUpdate={16}
      userId="id16"
      username="username16"
    />
    <GroupUsersRow
      displayName="Name17 Surname17"
      email="test17@test.com"
      key="id17"
      lastPictureUpdate={17}
      userId="id17"
      username="username17"
    />
    <GroupUsersRow
      displayName="Name18 Surname18"
      email="test18@test.com"
      key="id18"
      lastPictureUpdate={18}
      userId="id18"
      username="username18"
    />
    <GroupUsersRow
      displayName="Name19 Surname19"
      email="test19@test.com"
      key="id19"
      lastPictureUpdate={19}
      userId="id19"
      username="username19"
    />
  </div>
  <div
    className="group-users--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 55,
            "startCount": 41,
            "total": 55,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev "
      disabled={false}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, loaded with one page 1`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading "
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <GroupUsersRow
      displayName="Name0 Surname0"
      email="test0@test.com"
      key="id0"
      lastPictureUpdate={0}
      userId="id0"
      username="username0"
    />
    <GroupUsersRow
      displayName="Name1 Surname1"
      email="test1@test.com"
      key="id1"
      lastPictureUpdate={1}
      userId="id1"
      username="username1"
    />
    <GroupUsersRow
      displayName="Name2 Surname2"
      email="test2@test.com"
      key="id2"
      lastPictureUpdate={2}
      userId="id2"
      username="username2"
    />
    <GroupUsersRow
      displayName="Name3 Surname3"
      email="test3@test.com"
      key="id3"
      lastPictureUpdate={3}
      userId="id3"
      username="username3"
    />
    <GroupUsersRow
      displayName="Name4 Surname4"
      email="test4@test.com"
      key="id4"
      lastPictureUpdate={4}
      userId="id4"
      username="username4"
    />
    <GroupUsersRow
      displayName="Name5 Surname5"
      email="test5@test.com"
      key="id5"
      lastPictureUpdate={5}
      userId="id5"
      username="username5"
    />
    <GroupUsersRow
      displayName="Name6 Surname6"
      email="test6@test.com"
      key="id6"
      lastPictureUpdate={6}
      userId="id6"
      username="username6"
    />
    <GroupUsersRow
      displayName="Name7 Surname7"
      email="test7@test.com"
      key="id7"
      lastPictureUpdate={7}
      userId="id7"
      username="username7"
    />
    <GroupUsersRow
      displayName="Name8 Surname8"
      email="test8@test.com"
      key="id8"
      lastPictureUpdate={8}
      userId="id8"
      username="username8"
    />
    <GroupUsersRow
      displayName="Name9 Surname9"
      email="test9@test.com"
      key="id9"
      lastPictureUpdate={9}
      userId="id9"
      username="username9"
    />
    <GroupUsersRow
      displayName="Name10 Surname10"
      email="test10@test.com"
      key="id10"
      lastPictureUpdate={10}
      userId="id10"
      username="username10"
    />
    <GroupUsersRow
      displayName="Name11 Surname11"
      email="test11@test.com"
      key="id11"
      lastPictureUpdate={11}
      userId="id11"
      username="username11"
    />
    <GroupUsersRow
      displayName="Name12 Surname12"
      email="test12@test.com"
      key="id12"
      lastPictureUpdate={12}
      userId="id12"
      username="username12"
    />
    <GroupUsersRow
      displayName="Name13 Surname13"
      email="test13@test.com"
      key="id13"
      lastPictureUpdate={13}
      userId="id13"
      username="username13"
    />
    <GroupUsersRow
      displayName="Name14 Surname14"
      email="test14@test.com"
      key="id14"
      lastPictureUpdate={14}
      userId="id14"
      username="username14"
    />
    <GroupUsersRow
      displayName="Name15 Surname15"
      email="test15@test.com"
      key="id15"
      lastPictureUpdate={15}
      userId="id15"
      username="username15"
    />
    <GroupUsersRow
      displayName="Name16 Surname16"
      email="test16@test.com"
      key="id16"
      lastPictureUpdate={16}
      userId="id16"
      username="username16"
    />
    <GroupUsersRow
      displayName="Name17 Surname17"
      email="test17@test.com"
      key="id17"
      lastPictureUpdate={17}
      userId="id17"
      username="username17"
    />
    <GroupUsersRow
      displayName="Name18 Surname18"
      email="test18@test.com"
      key="id18"
      lastPictureUpdate={18}
      userId="id18"
      username="username18"
    />
    <GroupUsersRow
      displayName="Name19 Surname19"
      email="test19@test.com"
      key="id19"
      lastPictureUpdate={19}
      userId="id19"
      username="username19"
    />
  </div>
  <div
    className="group-users--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 20,
            "startCount": 1,
            "total": 20,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, loaded without data 1`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading "
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <div
      className="group-users-empty"
    >
      <FormattedMessage
        defaultMessage="No users found"
        id="admin.group_settings.group_details.group_users.no-users-found"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="group-users--footer empty"
  />
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, on loading with data 1`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading active"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <GroupUsersRow
      displayName="Name0 Surname0"
      email="test0@test.com"
      key="id0"
      lastPictureUpdate={0}
      userId="id0"
      username="username0"
    />
    <GroupUsersRow
      displayName="Name1 Surname1"
      email="test1@test.com"
      key="id1"
      lastPictureUpdate={1}
      userId="id1"
      username="username1"
    />
    <GroupUsersRow
      displayName="Name2 Surname2"
      email="test2@test.com"
      key="id2"
      lastPictureUpdate={2}
      userId="id2"
      username="username2"
    />
    <GroupUsersRow
      displayName="Name3 Surname3"
      email="test3@test.com"
      key="id3"
      lastPictureUpdate={3}
      userId="id3"
      username="username3"
    />
    <GroupUsersRow
      displayName="Name4 Surname4"
      email="test4@test.com"
      key="id4"
      lastPictureUpdate={4}
      userId="id4"
      username="username4"
    />
    <GroupUsersRow
      displayName="Name5 Surname5"
      email="test5@test.com"
      key="id5"
      lastPictureUpdate={5}
      userId="id5"
      username="username5"
    />
    <GroupUsersRow
      displayName="Name6 Surname6"
      email="test6@test.com"
      key="id6"
      lastPictureUpdate={6}
      userId="id6"
      username="username6"
    />
    <GroupUsersRow
      displayName="Name7 Surname7"
      email="test7@test.com"
      key="id7"
      lastPictureUpdate={7}
      userId="id7"
      username="username7"
    />
    <GroupUsersRow
      displayName="Name8 Surname8"
      email="test8@test.com"
      key="id8"
      lastPictureUpdate={8}
      userId="id8"
      username="username8"
    />
    <GroupUsersRow
      displayName="Name9 Surname9"
      email="test9@test.com"
      key="id9"
      lastPictureUpdate={9}
      userId="id9"
      username="username9"
    />
    <GroupUsersRow
      displayName="Name10 Surname10"
      email="test10@test.com"
      key="id10"
      lastPictureUpdate={10}
      userId="id10"
      username="username10"
    />
    <GroupUsersRow
      displayName="Name11 Surname11"
      email="test11@test.com"
      key="id11"
      lastPictureUpdate={11}
      userId="id11"
      username="username11"
    />
    <GroupUsersRow
      displayName="Name12 Surname12"
      email="test12@test.com"
      key="id12"
      lastPictureUpdate={12}
      userId="id12"
      username="username12"
    />
    <GroupUsersRow
      displayName="Name13 Surname13"
      email="test13@test.com"
      key="id13"
      lastPictureUpdate={13}
      userId="id13"
      username="username13"
    />
    <GroupUsersRow
      displayName="Name14 Surname14"
      email="test14@test.com"
      key="id14"
      lastPictureUpdate={14}
      userId="id14"
      username="username14"
    />
    <GroupUsersRow
      displayName="Name15 Surname15"
      email="test15@test.com"
      key="id15"
      lastPictureUpdate={15}
      userId="id15"
      username="username15"
    />
    <GroupUsersRow
      displayName="Name16 Surname16"
      email="test16@test.com"
      key="id16"
      lastPictureUpdate={16}
      userId="id16"
      username="username16"
    />
    <GroupUsersRow
      displayName="Name17 Surname17"
      email="test17@test.com"
      key="id17"
      lastPictureUpdate={17}
      userId="id17"
      username="username17"
    />
    <GroupUsersRow
      displayName="Name18 Surname18"
      email="test18@test.com"
      key="id18"
      lastPictureUpdate={18}
      userId="id18"
      username="username18"
    />
    <GroupUsersRow
      displayName="Name19 Surname19"
      email="test19@test.com"
      key="id19"
      lastPictureUpdate={19}
      userId="id19"
      username="username19"
    />
  </div>
  <div
    className="group-users--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.group_settings.groups_list.paginatorCount"
        values={
          Object {
            "endCount": 20,
            "startCount": 1,
            "total": 20,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={[Function]}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/group_details/GroupUsers should match snapshot, on loading without data 1`] = `
<div
  className="group-users"
>
  <div
    className="group-users--header"
  >
    <InjectIntl(FormattedMarkdownMessage)
      defaultMessage="AD/LDAP Connector is configured to sync and manage this group and its users. [Click here to view](/admin_console/authentication/ldap)"
      id="admin.group_settings.group_profile.group_users.ldapConnector"
    />
  </div>
  <div
    className="group-users--body"
  >
    <div
      className="group-users-loading active"
    >
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
    <div
      className="group-users-empty"
    >
      <FormattedMessage
        defaultMessage="No users found"
        id="admin.group_settings.group_details.group_users.no-users-found"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="group-users--footer empty"
  />
</div>
`;
